--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -7,12 +7,19 @@
 		justify-content: space-between;
 		padding-top: rem(20);
 		padding-bottom: rem(20);
+		min-height: rem(70);
+		height: 100%;
 	}
 	// .header__logo
 	&__logo {
-		max-width: rem(160);
+		max-width: rem(200);
+		min-height: rem(40);
+		display: flex;
+		align-items: center;
 		position: relative;
 		z-index: 5;
+		padding-right: rem(15);
+		flex-shrink: 0;
 		img {
 			width: 100%;
 		}
@@ -58,12 +65,17 @@
 		display: flex;
 		align-items: center;
 		column-gap: rem(20);
+		row-gap: rem(7);
 		flex-wrap: wrap;
 		@media (max-width: $mobile) {
 			// burger part
 			// burger part
 			flex-direction: column;
 			row-gap: rem(40);
+		}
+		@media (max-width: em(830)) {
+			column-gap: rem(40);
+			justify-content: center;
 		}
 	}
 	// .menu__item
