--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,7 +3,8 @@
 	background: rgba(250, 250, 252, 0.78);
 	position: relative;
 	width: 100vw;
-	height: calc(100vh - 87px);
+	height: 100%;
+	//height: 100%;
 	&::after {
 		z-index: -1;
 		content: "";
@@ -11,13 +12,13 @@
 		left: 0;
 		top: 0;
 		width: 100%;
-		height: calc(100vh - 87px);
+		height: 100%;
 		background: url("@img/herobackground.jpeg") center / cover no-repeat;
 	}
 	// .hero__container
 	&__container {
 		width: 100%;
-		height: calc(100vh - 87px);
+		height: calc(100vh - 80px);
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -1092,9 +1093,10 @@
 		text-align: center;
 		border-radius: rem(8);
 		&:not(:last-child) {
-			margin-bottom: rem(15);
+			margin-bottom: rem(25);
 		}
 		input {
+			margin-bottom: rem(3);
 			padding: rem(14) rem(34) rem(16);
 			line-height: 1.4;
 			border-radius: rem(8);
@@ -1111,6 +1113,7 @@
 				color: $subtitleColor;
 			}
 		}
+
 		// .contact-form__input-row--name
 		&--name {
 			&.contact-form__input-row {
